--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h2>This is my first project</h2>
     <h1>Hello mama, I am using GitHub</h1>
 </body>
 </html>
