--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h2>This is my first project</h2>
     <h1>Hello mama, I am using GitHub</h1>
+    <p>Lets go for a party</p>
+    <img src="flag.png">
+
 </body>
 </html>
